--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
  </form>
 
  <p class="heading">
-    Donot have an Account ?
+    Don't have an Account ?
     <a href="register.html" target="_blank">please Register</a>
  </p>
     <p class="four">
